# mongodb

./: .gitignore  README.md  pyproject.toml
dump/sample_supplies/: sales.metadata.json
lessons/: aggregation.js  array.js  expressive.js  indexes.js  operators.js  sub_documents.js  upsert.js
py_example/: main.py
