[tool.poetry]
name = "mongodb_tutorial"
version = "0.1.0"
description = ""
authors = ["Matheus Raposo <matheus_raposo@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.0.1"
dnspython = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
